--- a/nova969/berita.html
+++ b/nova969/berita.html
@@ -22,7 +22,7 @@
 <div class="container">
 <h1>Berita</h1>
 <div class="news">
-<h2><a href="artikel/tim-indonesia-juara-dunia.html">Tim Esport Indonesia Juara Dunia</a></h2>
+<h2><a href="artikel/tim-indonesia-juara-dunia.html">Tim Esport Indonesia Juara indonesia</a></h2>
 <p>Ringkasan berita... <a href="artikel/tim-indonesia-juara-dunia.html">Baca selengkapnya</a></p>
 </div>
 <div class="news">
